# space-conquest

./: .gitignore  CLAUDE.md  CONTROLLED_STARS_TABLE_EXAMPLE.txt  DAY2_IMPLEMENTATION_SUMMARY.md  DAY2_TUI_LAYOUT.txt  PROMPT_CHANGELOG.md  QUICKSTART.md  README.md  STATIONED_SHIPS_IMPLEMENTATION.md  VICTORY_SCREEN_IMPLEMENTATION.md  create_test_game.py  game.py  monitor_game.py  monitor_live.py  naming_examples.md  playtest_script.py  pyproject.toml  requirements.txt  run_server.py  test_day2_features.py  test_server.py  test_tui_poc.py  watch_game.py
.serena/: project.yml
docs/: ANALYSIS_QUICKSTART.md  DESIGN_REVISION_NPC_GARRISON_MECHANIC.md  GRAPH_REACT_PLAYER.md  IMPLEMENTATION_GUIDE_STRATEGIC_REVISIONS.md  IMPLEMENTATION_SUMMARY.md  LANGGRAPH_ARCHITECTURE.md  LLM_AGENT_IMPROVEMENT_ANALYSIS.md  LLM_AGENT_SETUP.md  LLM_COMPETITIVE_IMPROVEMENTS.md  OBSERVATION_EXAMPLE.json  PROMPT_IMPROVEMENTS.md  PYTHON_REACT_AGENT.md  QUICKSTART_LLM.md  THE_NEXUS_GAMBIT.md  game_analysis.md  getting-started.md  implementation-complete.md  llm_strategy_guide.md  server-architecture.md
examples/: game_analysis_example.py  python_react_agent_example.py  sample_game_log.jsonl  strategic_logging_example.py  strategic_metrics_example.py
frontend/: README.md  game.js  index.html  styles.css
logs/: game_seed12250612_p1_turn1_strategic.jsonl  game_seed12250612_p2_turn1_strategic.jsonl  game_seed1548204651_p2_turn1_strategic.jsonl  game_seed202512251215_p1_turn1_strategic.jsonl  game_seed202512251215_p2_turn1_strategic.jsonl  game_seed202512251226_p1_turn1_strategic.jsonl  (+35 more)
(+108 files in other folders)
