[project]
name = "space-conquest"
version = "0.1.0"
description = "A turn-based 4X strategy game where players compete to capture each other's home stars through fleet management and combat"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.28.0",
    "pydantic>=2.0",
    "tenacity>=8.0",
    "textual>=0.47.0",
    "langchain-core>=0.3.0",
    "langchain-aws>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
